# valify

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_org_llm_model.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py
backend/app/db/models/: __init__.py  api_token.py  call.py  organization.py  project.py  user.py
backend/app/repositories/: api_token_repository.py  call_repository.py  organization_repository.py  project_repository.py  user_repository.py
backend/app/routers/: auth.py  projects.py  tokens.py  validate.py
backend/app/schemas/: auth.py  call.py  project.py  validate.py
backend/app/services/: auth_service.py  call_service.py  call_test_service.py  project_service.py  token_service.py
backend/app/services/llm/: base.py  factory.py  groq.py  openrouter.py  prompt.py
frontend/: Dockerfile  Dockerfile.prod  docker-entrypoint.sh  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/projects/: page.tsx
frontend/app/(dashboard)/projects/[slug]/: page.tsx
frontend/app/(dashboard)/settings/: page.tsx
frontend/app/_components/: Demo.tsx
frontend/lib/: api.ts
(+1 files in other folders)
