[project]
name = "valify-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.136.1",
  "sqlalchemy[asyncio]==2.0.49",
  "alembic==1.18.4",
  "asyncpg>=0.30",
  "redis==7.1.1",
  "httpx>=0.28",
  "pyjwt>=2.10",
  "bcrypt>=4.3",
  "pydantic-settings>=2.7",
  "pydantic[email]>=2.0",
  "uvicorn[standard]>=0.34",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
